# spdlog

./: CMakeLists.txt
cmake/: spdlogConfig.cmake.in
